8008577: Use CLDR Locale Data by Default
Reviewed-by: erikj, okutsu